# servicex-coffea-multiprocessing

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  image_requirements.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml
dask/: river-values.yaml
notebooks/: CoffeaAnalysis.ipynb  DaskAnalysis.ipynb  FuncXAnalysis.ipynb  dask.ipynb  funcx.ipynb  qastle samles.ipynb  ray.ipynb
notebooks/CMS/: CMSFuncXAnalysis.ipynb
scripts/: install_funcx.py
src/sx_multi/: __init__.py  analysis.py  coffea_dask.py  coffea_funcx.py  coffea_processing.py  coffea_ray.py  dask_executor.py  data_source.py  executor.py  funcx_executor.py  funcx_util.py  local_executor.py  parquet_events.py  sx_qastle.py
sx_multi/: __init__.py  coffea_dask.py  coffea_ray.py  funcx_util.py
tests/: test_import.py
