[metadata]
name = sx_multi
version = 0.1.0
description = Connecting the technologies of ServiceX, coffea, and multiprocessing
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/gordonwatts/servicex-coffea-multiprocessing
author = Gordon Watts
author_email = gordon@gordonandpaula.net
license = MIT
license_file = LICENSE
keywords = physics servicex coffea multiprocessing
project_urls =
    Source = https://github.com/gordonwatts/servicex-coffea-multiprocessing
    Tracker = https://github.com/gordonwatts/servicex-coffea-multiprocessing/issues
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Physics
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
package_dir =
    = src
packages = find:
include_package_data = True
python_requires = >=3.6
install_requires =
    servicex==2.2a2
    numpy==1.19.3 # Get around a bug in windows. Check back January, 2021
    servicex_clients
    coffea
    funcx
    dask[distributed]
    ray
    tenacity
    aiostream

[options.packages.find]
where = src
